Redmine issue 1019: fixing search help --wiki page visibility

--- a/shared/css/bootstrap_override.css
+++ b/shared/css/bootstrap_override.css
@@ -1949,8 +1949,7 @@ The #searchFormDiv is on all search pages to control form fields, labels, select
 	height: 23px;
 }
 .jqx-combobox-input, .jqx-combobox-content, .jqx-combobox-arrow-normal {
-	line-height: 23px !important;
-	height: 23px !important;
+	min-height: 23px !important;
 }
 .jqx-combobox {
 	min-height: 21px !important;
